adjusted the spacing for mobile devices to avoid breaking the UI

--- a/src/input.css
+++ b/src/input.css
@@ -30,7 +30,7 @@
     flex-grow: 1;
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1024px) {
     .timeframes-list {
         flex-direction: column;
     }
